--- a/dev/front/views/cityList.html
+++ b/dev/front/views/cityList.html
@@ -1,6 +1,13 @@
+<div class="row">   
+     <div class="col-lg-12">
+        <h4>Select a City</h4>
+    </div>
+    <div class="col-lg-12">
+        <select ng-model="selectedAddress" 
+            ng-options="address as address.name for address in list"
+            ng-change="getCityData()">    
+        </select>
+    </div>
+</div>
 
-<select ng-model="selectedAddress" 
-        ng-options="address as address.name for address in list"
-        ng-change="getCityData()">    
-</select>
 
