Forecast + Api for multiple Zips

--- a/dev/front/styles/styles.less
+++ b/dev/front/styles/styles.less
@@ -13,3 +13,21 @@ and open the template in the editor.
     font-size: 24px;
     color: red;
 }
+.forecast-block{
+    padding-top: 20px
+}
+.forecast-block-title{
+    padding-bottom: 20px;
+}
+.forecast-minibox{
+        padding-top: 10px;
+}
+.clear-left{
+    clear: left;    
+}
+@media (max-width: 768px){
+    .forecast-minibox{
+        margin-top: 20px;
+        text-align: center
+    }    
+}
