--- a/dev/front/styles/styles.less
+++ b/dev/front/styles/styles.less
@@ -25,6 +25,9 @@ and open the template in the editor.
 .clear-left{
     clear: left;    
 }
+.p-box{
+    margin-top: 20px
+}
 @media (max-width: 768px){
     .forecast-minibox{
         margin-top: 20px;
