--- a/dev/front/styles/styles.less
+++ b/dev/front/styles/styles.less
@@ -22,15 +22,16 @@ and open the template in the editor.
 .forecast-minibox{
         padding-top: 10px;
 }
-.clear-left{
-    clear: left;    
-}
 .p-box{
     margin-top: 20px
 }
-@media (max-width: 768px){
+@media (max-width: 767px){
     .forecast-minibox{
         margin-top: 20px;
         text-align: center
-    }    
+    }  
+    .clearfix-smr{
+        clear: both;
+    }
+    
 }
