--- a/dev/front/views/cityWeekInfo.html
+++ b/dev/front/views/cityWeekInfo.html
@@ -11,6 +11,7 @@
                 <div>Weather <strong>{{item.text}}</strong></div>            
             </div>
             <div class="clearfix" ng-if="$index%4 == 3"></div>
+            <div class="clearfix-smr" ng-if="$index%2 == 1"></div>
         </div>
     </div>
 </div>
